<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginBottom="39dp"
    android:background="@color/myColor"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="1">


    <EditText
        android:id="@+id/ip"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/port"
        android:layout_alignLeft="@+id/port"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:autofillHints="@string/ip"
        android:hint="@string/ip"
        android:inputType="text" />

    <EditText
        android:id="@+id/port"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ip"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/h_port"
        android:autofillHints="@string/ip"
        android:inputType="numberSigned" />

    <Button
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/port"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/connect"
        android:onClick="onClick"/>

    <ImageButton
        android:id="@+id/up"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/connect"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/up_des"
        app:srcCompat="@drawable/up" />

    <ImageButton
        android:id="@+id/right"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/up"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/connect"
        android:layout_toEndOf="@+id/connect"
        app:srcCompat="@drawable/right"
        android:contentDescription="@string/go_right" />

    <ImageButton
        android:id="@+id/left"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/up"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/connect"
        android:layout_toStartOf="@+id/connect"
        app:srcCompat="@drawable/left"
        android:contentDescription="@string/go_left" />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_below="@+id/up"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/up_des"
        app:srcCompat="@drawable/back" />

    <Button
        android:id="@+id/MANUALOVERRIDE"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/back"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/manual"
        android:onClick="onClick"/>

</RelativeLayout>

