<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <WebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/POWER"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OFF"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="12dp" />

    <ImageButton
        android:id="@+id/upr"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/POWER"
        android:layout_marginLeft="457dp"
        android:layout_marginTop="202dp"
        android:layout_toRightOf="@id/POWER"
        android:contentDescription="@string/up_des"
        app:srcCompat="@drawable/up" />

    <ImageButton
        android:id="@+id/rightr"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/POWER"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="646dp"
        android:layout_marginLeft="646dp"
        android:layout_marginTop="287dp"
        android:contentDescription="@string/go_right"
        app:srcCompat="@drawable/right" />

    <ImageButton
        android:id="@+id/leftr"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/POWER"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="438dp"
        android:layout_marginLeft="438dp"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="223dp"
        android:layout_marginRight="223dp"
        android:contentDescription="@string/go_left"
        app:srcCompat="@drawable/left" />

    <ImageButton
        android:id="@+id/backr"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/POWER"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="287dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:contentDescription="@string/go_back"
        app:srcCompat="@drawable/back" />

</RelativeLayout>